objects/IP_Declaration_Form__c.object
<CustomObject>
    <description>Device Manager&apos;s IP Declaration Form</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Device__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Device__r.Account__c</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Device_ID__c</fullName>
        <formula>Device__r.CRMDID__c</formula>
        <label>CRM Device ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>IP Declaration Form</relationshipLabel>
        <relationshipName>IP_Declaration_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <description>Customer Contact for this form</description>
        <inlineHelpText>Customer Contact for this form</inlineHelpText>
        <label>Customer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Device__r.Account__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <formula>Device__r.Name</formula>
        <label>Device Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>IP Declaration Form</relationshipLabel>
        <relationshipName>IP_Declaration_Form</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Contact person&apos;s Email address</description>
        <inlineHelpText>Contact person&apos;s Email address</inlineHelpText>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <formula>TEXT(Device__r.Fab__c)</formula>
        <label>Fab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Submitted_Date__c</fullName>
        <label>Form Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <description>Device&apos;s Geometry field.</description>
        <formula>Device__r.Process_Geometry_NM__c</formula>
        <inlineHelpText>formula to Device&apos;s Geometry field.</inlineHelpText>
        <label>Geometry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Declaration_Template__c</fullName>
        <formula>TEXT( Device__r.Account__r.IP_Declaration_Template__c )</formula>
        <label>IP Declaration Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Status__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Undeclared&apos;),&apos;Draft&apos;,Text(Status__c))</formula>
        <label>IP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Technology__c</fullName>
        <formula>Device__r.IP_Technology__c</formula>
        <label>IP Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Config_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate from where to retrieve IP Components , when loading IP Declaration Form page.</description>
        <label>Is Config Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>User&apos;s self enter Job Title</description>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <description>use in Email template in IPDeclarationFormService</description>
        <formula>LastModifiedBy.LastName + &apos;, &apos; + LastModifiedBy.FirstName + &apos;(&apos; +  LastModifiedBy.Username + &apos;)&apos;</formula>
        <label>LastModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Assigned_Customer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use during reassignment owner, to remember the previous owner.</description>
        <inlineHelpText>Use during reassignment owner, to remember the previous owner.</inlineHelpText>
        <label>Last Assigned Customer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Declaration_Form1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Submission_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This for the tentative fix for the online form interim solution(until Dec). Once check team to manage manual submission of IP Declaration Form.</description>
        <label>Manual Submission Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <formula>Device__r.Device_Mask_Set_Title__c</formula>
        <label>Mask Set Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Status__c</fullName>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Result</fullName>
                    <default>true</default>
                    <label>No Result</label>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Unmatched</fullName>
                </value>
                <value>
                    <fullName>Unmatched – No IP</fullName>
                </value>
                <value>
                    <fullName>Unmatched – No VCID</fullName>
                </value>
                <value>
                    <fullName>Overridden by IP</fullName>
                </value>
                <value>
                    <fullName>Overridden by VCID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Matching_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Matching Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_to_New_Owner__c</fullName>
        <description>Use when changing of form owner.</description>
        <inlineHelpText>Use when changing of form owner.</inlineHelpText>
        <label>Notes to New Owner</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nothing_to_Declare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visible only if account name is on the ‘IP nothing to declare‘</description>
        <label>Nothing to Declare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Step_1_Approvers__c</fullName>
        <description>Contains the number of FE/DE approvers assigned.</description>
        <formula>(IF(ISBLANK(Step_1_Approver_1__c),0,1) + IF(ISBLANK(Step_1_Approver_2__c),0,1) + 
IF(ISBLANK(Step_1_Approver_3__c),0,1) + IF(ISBLANK(Step_1_Approver_4__c),0,1) + 
IF(ISBLANK(Step_1_Approver_5__c),0,1) + IF(ISBLANK(Step_1_Approver_6__c),0,1) + 
IF(ISBLANK(Step_1_Approver_7__c),0,1) + IF(ISBLANK(Step_1_Approver_8__c),0,1) + 
IF(ISBLANK(Step_1_Approver_9__c),0,1) + IF(ISBLANK(Step_1_Approver_10__c),0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Step 1 Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_3rd_Party_IP__c</fullName>
        <label>Other 3rd Party IP (please specify)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of IP Declaration Form. If it&apos;s null, everyone in the account contacts can edit the form.
Once there is first user filled the form, the last modify userID will be set as ownerId.</description>
        <inlineHelpText>Owner of IP Declaration Form. If it&apos;s null, everyone in the account contacts can edit the form.
Once there is first user filled the form, the last modify userID will be set as ownerId.</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Declaration_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact person&apos;s phone number</description>
        <inlineHelpText>Contact person&apos;s phone number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <formula>IF( NOT(ISBLANK( Device__r.Process_Family__c )) &amp;&amp; NOT(ISPICKVAL(Device__r.Geometry_Filter__c, &apos;&apos;)) , Device__r.Process_Family__c + TEXT(Device__r.Geometry_Filter__c), 
     IF( ISBLANK( Device__r.Process_Family__c ) &amp;&amp; NOT(ISPICKVAL(Device__r.Geometry_Filter__c, &apos;&apos;)) ,  TEXT(Device__r.Geometry_Filter__c), 
          IF( NOT(ISBLANK( Device__r.Process_Family__c )) &amp;&amp; ISPICKVAL(Device__r.Geometry_Filter__c, &apos;&apos;), Device__r.Process_Family__c, &apos;NA&apos;) 
     ) 
) 

/*
 IF(logical_test, value_if_true, value_if_false) 

a= Device__r.Process_Family__c , to be replace by Assigned Process Id (PI/YE) field in Siebel
b= Device__r.Geometry__c , to be replaced by Technology in Siebel

original:
if(process != null &amp;&amp; technology != null){
			return process + &quot;, &quot; + technology;
		}else if(process == null &amp;&amp; technology != null){
			return technology;
		}else if(process != null &amp;&amp; technology == null){
			return process;
		}else {
			return &quot;NA&quot;;
		}
*/</formula>
        <label>Process Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Device__r.Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Record_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to TRUE, updates the recordtype to &apos;Master&apos;.</description>
        <label>Reset Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision_Required_Formula__c</fullName>
        <formula>CASE(TEXT( Revision_Required__c),
 &quot;TRUE&quot;, &quot;Updated but Not Submitted &quot;+Image(IF(CONTAINS($Api.Enterprise_Server_URL_300, &apos;globalfoundryview&apos;),&apos;&apos;,&apos;/&apos;) &amp; &quot;resource/IPDecAttentionRequired&quot;,&quot;&quot;,15,15), 
&quot;FALSE&quot;, &quot;Submitted&quot;+Image(IF(CONTAINS($Api.Enterprise_Server_URL_300, &apos;globalfoundryview&apos;),&apos;&apos;,&apos;/&apos;) &amp; &quot;resource/IPDecUpdatedStatus&quot;,&quot;&quot;,15,15),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Required__c</fullName>
        <description>Indicator whether need update from configuration</description>
        <label>Revision Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Customer status, might be different from internal status.
Pending Submission-&gt; no change
Rejected-&gt;Resubmission Required
Pending Review-&gt; no change
Validated by FE-&gt;Reviewed by FE
VCID Validated - Match-&gt;Validated
VCID Validated - Override-&gt;Validated
VCID Validated - Mismatch-&gt;Reviewed by FE
Resubmission Required-&gt; no change
Reconciliation Required-&gt; no change
Recon - Customer Accepted-&gt;Resubmission Required
Pre-Reconciliation Required-&gt;Pending Submission</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Resubmission</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Undeclared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_1_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FE/DE approver 10.</description>
        <label>Step 1 Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Declaration_FormBh22</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_1_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FE/DE approver 1.</description>
        <label>Step 1 Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Declaration_Form2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_1_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FE/DE approver 2.</description>
        <label>Step 1 Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_Declaration_Form3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IP Declaration Form</label>
    <listViews>
        <fullName>IP_declaration_Pending_Closure1</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>CRM_Device_ID__c</columns>
        <columns>Device__c</columns>
        <columns>Geometry__c</columns>
        <columns>IP_Technology__c</columns>
        <columns>IP_Status__c</columns>
        <columns>Matching_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Matching_Status__c</field>
            <operation>equals</operation>
            <value>Unmatched,Unmatched – No IP</value>
        </filters>
        <filters>
            <field>IP_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <label>IP declaration Pending Closure</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IP_declaration_Pending_closure</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>CRM_Device_ID__c</columns>
        <columns>Device_Name__c</columns>
        <columns>Geometry__c</columns>
        <columns>IP_Technology__c</columns>
        <columns>IP_Status__c</columns>
        <columns>Matching_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IP_Status__c</field>
            <operation>equals</operation>
            <value>Draft,Undeclared,Pending Resubmission</value>
        </filters>
        <filters>
            <field>Mask_Set_Title__c</field>
            <operation>notContain</operation>
            <value>MPW</value>
        </filters>
        <filters>
            <field>Device_Name__c</field>
            <operation>notContain</operation>
            <value>MPW</value>
        </filters>
        <label>IP declaration Pending Submission</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IPD{YYYY}{MM}{000000}</displayFormat>
        <label>IP Declaration Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Declaration Form</pluralLabel>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <description>This record type makes all fields read-only.</description>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>